<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chat.ChatFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/topAppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/button_back"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/back"
                    android:elevation="10dp"
                    android:textColor="@color/primaryColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.416"
                    app:srcCompat="@drawable/baseline_arrow_back_24" />

                <ImageView
                    android:id="@+id/logo_sammy"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:importantForAccessibility="no"
                    android:padding="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/button_back"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3"
                    app:srcCompat="@drawable/mascot" />

                <TextView
                    android:id="@+id/topAppBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingTop="4dp"
                    android:text="@string/appbar_sammy"
                    android:textColor="@color/primaryColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/logo_sammy"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@drawable/bg_app_bar" />

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/app_bar_line"
            android:layout_width="0dp"
            android:layout_height="1.8dp"
            android:layout_marginTop="-5dp"
            android:src="@drawable/custom_appbar_nav_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topAppBarLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_chatHistory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@id/bottomView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topAppBarLayout"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/item_message_local" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/bg_app_bar"
            app:layout_constraintBottom_toTopOf="@id/bottomView"
            tools:layout_editor_absoluteY="445dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/button_suggestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/baseline_keyboard_arrow_up_24"
                app:layout_constraintBottom_toTopOf="@id/rv_questionSuggestions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.972"
                app:layout_constraintStart_toEndOf="@id/tv_suggestion"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_suggestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_suggestion_label"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_questionSuggestions"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintBottom_toTopOf="@id/til_question"
                app:layout_constraintTop_toBottomOf="@id/tv_suggestion" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="40dp"
                app:boxCornerRadiusBottomStart="40dp"
                app:boxCornerRadiusTopEnd="40dp"
                app:boxCornerRadiusTopStart="40dp"
                app:boxStrokeColor="@color/black"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ib_send"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tiet_question_label"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:padding="13dp"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/ib_send"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/baseline_circle_24"
                android:contentDescription="@string/ib_send_label"
                android:padding="10dp"
                android:src="@drawable/baseline_send_24"
                app:layout_constraintBottom_toBottomOf="@id/til_question"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/til_question"
                tools:ignore="RedundantDescriptionCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>